testsuite/poke.pkl/acons-diag-3.pk
/* { dg-do compile } */

var a
  = int<32> (1 + 2); /* { dg-error "syntax error" } */
